--- a/practice_02-01_detection-description.ipynb
+++ b/practice_02-01_detection-description.ipynb
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO\n",
-    "PATH_TO_RESOURCES = \"./img/\"  # FIXME set this to the path of the twinit resource directory"
+    "PATH_TO_RESOURCES = \"./\"  # FIXME set this to the path of the twinit resource directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "prof"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "prof"
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "prof"
@@ -163,18 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Some Jupyter magic to help you\n",
     "# This creates a SORTED list of files to process.\n",
-    "bubble_files = !ls $PATH_TO_RESOURCES/b*.png | sort"
+    "bubble_files = !ls $PATH_TO_RESOURCES/*.png | sort"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "prof"
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "prof"
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "# prof\n",
-    "def detect_harris_points(image_gray: np.array, max_keypoints: int=30, \n",
+    "def detect_harris_points(image_gray: np.array, max_keypoints: int=2000, \n",
     "                         min_distance: int=25, threshold: float=0.1) -> np.array:\n",
     "    \"\"\"\n",
     "    Detects and returns a sorted list of coordinates for each corner keypoint detected in an image.\n",
@@ -331,7 +331,7 @@
     "    # ...and their values\n",
     "    candidate_values = harris_resp[detect_mask]\n",
     "    #sort candidates\n",
-    "    sorted_indices = np.argsort(candidate_values)\n",
+    "    sorted_indices = np.argsort(-1 * candidate_values)\n",
     "    # keep only the bests\n",
     "    best_corners_coordinates = candidates_coords[sorted_indices][:max_keypoints]\n",
     "    \n",
@@ -340,46 +340,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "164.52251566084578\n",
-      "-1.4850946261737975e-21\n",
-      "108.62475523891783\n",
-      "[[138  32]\n",
-      " [ 92   1]\n",
-      " [ 41  29]\n",
-      " [154 144]\n",
-      " [ 53 267]\n",
-      " [176  75]\n",
-      " [ 55 242]\n",
-      " [110 159]\n",
-      " [ 44 278]\n",
-      " [162  74]\n",
-      " [ 23 100]\n",
-      " [110 144]\n",
-      " [ 33 267]\n",
-      " [ 98 227]\n",
-      " [134 144]\n",
-      " [ 33 203]\n",
-      " [ 79 239]\n",
-      " [ 58 210]\n",
-      " [136 218]\n",
-      " [ 57  32]\n",
-      " [192 135]\n",
-      " [151 263]\n",
-      " [ 29 120]\n",
-      " [168 159]\n",
-      " [ 22 170]\n",
-      " [194  92]\n",
-      " [134 157]\n",
-      " [ 56  85]\n",
-      " [ 81  39]\n",
-      " [113 242]]\n"
+      "[[ 804 1079]\n",
+      " [ 565  734]\n",
+      " [ 704  554]\n",
+      " ...\n",
+      " [ 695 1052]\n",
+      " [ 304  429]\n",
+      " [ 316  740]]\n"
      ]
     },
     {
@@ -403,22 +377,12 @@
     "    bb = bubbles[bb_id]\n",
     "    bb_gray = bubbles_gray[bb_id]\n",
     "    bb_h = compute_harris_response(bb_gray)\n",
-    "    print(bb_h[191][100])\n",
-    "    print(bb_h[227][66])\n",
-    "    print(bb_h[89][250])\n",
     "\n",
     "    filtered_coords = detect_harris_points(bb_gray, \n",
     "                                        min_distance=min_distance)\n",
     "    print(filtered_coords)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
