--- a/practice_02-01_detection-description.ipynb
+++ b/practice_02-01_detection-description.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "prof"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "prof"
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "prof"
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "prof"
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "tags": [
      "prof"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
     "# (just run this cell)\n",
     "# Display some bubbles and the detected keypoints\n",
     "#num_bb = 6\n",
-    "num_bb = 1\n",
+    "'''num_bb = 1\n",
     "min_distance=25\n",
     "plt.figure(figsize=(8,16))\n",
     "for bb_id in range(num_bb):\n",
@@ -380,9 +380,34 @@
     "\n",
     "    filtered_coords = detect_harris_points(bb_gray, \n",
     "                                        min_distance=min_distance)\n",
+    "    print(filtered_coords)'''\n",
+    "    \n",
+    "num_bb = 1\n",
+    "min_distance=25\n",
+    "plt.figure(figsize=(8,16))\n",
+    "keypoints = []\n",
+    "for bb_id in range(num_bb):\n",
+    "    bb = bubbles[bb_id]\n",
+    "    bb_gray = bubbles_gray[bb_id]\n",
+    "    bb_h = compute_harris_response(bb_gray)\n",
+    "\n",
+    "    filtered_coords = detect_harris_points(bb_gray, \n",
+    "                                        min_distance=min_distance)\n",
+    "    keypoints = filtered_coords\n",
     "    print(filtered_coords)\n",
-    "    "
+    "\n",
+    "f = open(\"python_keypoints.txt\", \"w\")\n",
+    "for x in keypoints:\n",
+    "  f.write(str(x[0]) + ' ' + str(x[1]) + '\\n')\n",
+    "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
